fix(deepseek): update dsw-specfic-bubble to contrast with new bg

--- a/styles/deepseek/catppuccin.user.less
+++ b/styles/deepseek/catppuccin.user.less
@@ -153,7 +153,7 @@
     --dsw-alias-toast-bg: var(--dsw-static-neutral-bluish-750);
     --dsw-alias-tooltip-bg: var(--dsw-static-neutral-bluish-750);
 
-    --dsw-specific-bubble: @base;
+    --dsw-specific-bubble: @surface0;
     --dsw-specific-input-major: @surface0;
     --dsw-specific-login-input: var(--dsw-static-neutral-900);
     --dsw-specific-menu: var(--dsw-alias-bg-layer-3);
